--- a/index.html
+++ b/index.html
@@ -11,14 +11,31 @@
 <body>
 
 <header class="header">
-  <nav class="nav justify-content-end">
-    <a class="nav-link active" href="#">Главная</a>
-    <a class="nav-link" href="#">Наши проекты</a>
-    <a class="nav-link" href="#">Услуги</a>
-    <a class="nav-link" href="#">Новости</a>
-    <a class="nav-link" href="#">Контакты</a>
-  </nav>
-  <img src="./assets/img/cat-1.jpg" alt="">
+  <div class="navigation">
+    <div class="background"></div>
+    <div class="container">
+      <ul>
+        <li class="active">
+          <a href="#">Главная</a>
+        </li>
+        <li>
+          <a href="#">Наши проекты</a>
+        </li>
+        <li>
+          <a href="#">Услуги</a>
+        </li>
+        <li>
+          <a href="#">Новости</a>
+        </li>
+        <li>
+          <a href="#">Контакты</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="container ">
+    Title
+  </div>
 </header>
 
 </body>
