--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 
-<header class="header">
-  <div class="navigation">
-    <div class="background"></div>
-    <div class="container">
+<div class="container-fluid header">
+
+  <div class="row">
+    <div class="navigation col text-white">
+      <div class="background"></div>
       <ul>
         <li class="active">
           <a href="#">Главная</a>
@@ -33,14 +34,64 @@
       </ul>
     </div>
   </div>
-  <div class="title">
-    <div class="container">
-      <div class="sub-title">Передовая IT студия</div>
-      <h1>Мы создаем легкие решения<br />сложных задач и проблем</h1>
-      <a class="btn btn-primary" href="#" role="button">Наши проекты</a>
+
+  <div class="row">
+    <div class="title col-6 offset-3 text-white text-center">
+      <div class="mb-3">Передовая IT студия</div>
+      <h1 class="mb-5">Мы создаем легкие решения сложных задач и проблем</h1>
+      <a class="btn btn-primary mb-3" href="#" role="button">Наши проекты</a>
     </div>
   </div>
-</header>
+
+</div>
+
+<!--services---------------------------->
+
+<div class="container services">
+
+  <div class="row">
+    <div class="col col-8 offset-2 text-center">
+      <h2 class="mb-4">Мы создаем мобильные приложения для крупных корпораций</h2>
+      <p class="mb-5">
+        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+        Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+    </div>
+  </div>
+
+  <div class="row mb-5">
+    <div class="item col-4 d-flex flex-row">
+      <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
+      <div class="pt-5">
+        <h5>Создание сайтов</h5>
+        <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+      </div>
+    </div>
+
+    <div class="item col-4 d-flex flex-row">
+      <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
+      <div class="pt-5">
+        <h5>Создание сайтов</h5>
+        <p class="description">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
+      </div>
+    </div>
+
+    <div class="item col-4 d-flex flex-row">
+      <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
+      <div class="pt-5">
+        <h5>Создание сайтов</h5>
+        <p class="description">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col text-center">
+      <a class="btn btn-primary" href="#" role="button">Все услуги</a>
+    </div>
+  </div>
+
+</div>
 
 </body>
 </html>
+
