--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@
 
   <div class="row">
     <div class="navigation col text-white">
-      <div class="background"></div>
-      <ul>
-        <li class="active">
-          <a href="#">Главная</a>
-        </li>
-        <li>
-          <a href="#">Наши проекты</a>
-        </li>
-        <li>
-          <a href="#">Услуги</a>
-        </li>
-        <li>
-          <a href="#">Новости</a>
-        </li>
-        <li>
-          <a href="#">Контакты</a>
-        </li>
-      </ul>
+      <div class="navigation-link active">
+        <a href="#">Главная</a>
+      </div>
+      <div class="navigation-link">
+        <a href="#">Наши проекты</a>
+      </div>
+      <div class="navigation-link">
+        <a href="#">Услуги</a>
+      </div>
+      <div class="navigation-link">
+        <a href="#">Новости</a>
+      </div>
+      <div class="navigation-link">
+        <a href="#">Контакты</a>
+      </div>
     </div>
   </div>
 
@@ -60,7 +57,7 @@
   </div>
 
   <div class="row mb-5">
-    <div class="item col-4 d-flex flex-row">
+    <div class="item col-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5>Создание сайтов</h5>
@@ -68,7 +65,7 @@
       </div>
     </div>
 
-    <div class="item col-4 d-flex flex-row">
+    <div class="item col-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5>Создание сайтов</h5>
@@ -76,7 +73,7 @@
       </div>
     </div>
 
-    <div class="item col-4 d-flex flex-row">
+    <div class="item col-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5>Создание сайтов</h5>
