add helper classes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="row">
     <div class="title col-6 offset-3 text-white text-center">
       <div class="mb-3">Передовая IT студия</div>
-      <h1 class="mb-5">Мы создаем легкие решения сложных задач и проблем</h1>
+      <h1 class="mb-5 fw-800">Мы создаем легкие решения сложных задач и проблем</h1>
       <a class="btn btn-primary mb-3" href="#" role="button">Наши проекты</a>
     </div>
   </div>
@@ -49,8 +49,8 @@
 
   <div class="row">
     <div class="col col-8 offset-2 text-center">
-      <h2 class="mb-4">Мы создаем мобильные приложения для крупных корпораций</h2>
-      <p class="mb-5">
+      <h2 class="mb-4 fw-700">Мы создаем мобильные приложения для крупных корпораций</h2>
+      <p class="mb-5 color-secondary">
         Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
         Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
     </div>
@@ -60,24 +60,24 @@
     <div class="item col-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
-        <h5>Создание сайтов</h5>
-        <p class="description">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+        <h5 class="fw-600">Создание сайтов</h5>
+        <p class="description color-secondary">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
       </div>
     </div>
 
     <div class="item col-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
-        <h5>Создание сайтов</h5>
-        <p class="description">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
+        <h5 class="fw-600">Создание сайтов</h5>
+        <p class="description color-secondary">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
       </div>
     </div>
 
     <div class="item col-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
-        <h5>Создание сайтов</h5>
-        <p class="description">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
+        <h5 class="fw-600">Создание сайтов</h5>
+        <p class="description color-secondary">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
       </div>
     </div>
   </div>
