--- a/index.html
+++ b/index.html
@@ -87,7 +87,77 @@
       <a class="btn btn-primary" href="#" role="button">Все услуги</a>
     </div>
   </div>
+</div>
 
+<!--about-------------------------------->
+
+<div class="bg-gray">
+  <div class="container about">
+
+    <div class="row about-block">
+      <div class="col-6 about-text pl-0 pr-5">
+        <h2 class="fw-700">Высокие стандарты разработки</h2>
+        <p class="color-secondary my-4">
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице с начала XVI
+          века.
+        </p>
+        <a href="#">Подробнее о компании</a>
+      </div>
+      <div class="col-6 pr-0 pl-5">
+        <img src="/assets/img/cat-2.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="row about-statistic text-center py-5">
+      <div class="col-2">
+        <div class="number">
+          <img src="/assets/icons/web-programming.svg" alt="">
+          <p class="pl-3 m-0">123</p>
+        </div>
+        <div>
+          <p class="color-secondary">Our projects</p>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="number">
+          <img src="/assets/icons/web-programming.svg" alt="">
+          <p class="pl-3 m-0">123</p>
+        </div>
+        <div>
+          <p class="color-secondary">Our projects</p>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="number">
+          <img src="/assets/icons/web-programming.svg" alt="">
+          <p class="pl-3 m-0">123</p>
+        </div>
+        <div>
+          <p class="color-secondary">Our projects</p>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="number">
+          <img src="/assets/icons/web-programming.svg" alt="">
+          <p class="pl-3 m-0">123</p>
+        </div>
+        <div>
+          <p class="color-secondary">Our projects</p>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="number">
+          <img src="/assets/icons/web-programming.svg" alt="">
+          <p class="pl-3 m-0">123</p>
+        </div>
+        <div>
+          <p class="color-secondary">Our projects</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
 
 </body>
