--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="container about">
 
     <div class="row about-block">
-      <div class="col-6 about-text pl-0 pr-5">
+      <div class="col-6 about-text pr-5">
         <h2 class="fw-700">Высокие стандарты разработки</h2>
         <p class="color-secondary my-4">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
@@ -104,7 +104,7 @@
         </p>
         <a href="#">Подробнее о компании</a>
       </div>
-      <div class="col-6 pr-0 pl-5">
+      <div class="col-6 pl-5">
         <img src="/assets/img/cat-2.jpg" alt="">
       </div>
     </div>
@@ -154,6 +154,55 @@
         <div>
           <p class="color-secondary">Our projects</p>
         </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!--works------------------------------->
+
+<div class="bg-purple">
+  <div class="container works py-5">
+
+    <div class="row py-5">
+      <div class="col-6">
+        <h2 class="fw-700 text-white">
+          Наши работы, на которых мы специализируемся
+        </h2>
+      </div>
+
+      <div class="col-6 text-right align-self-center">
+        <a class="btn btn-primary" href="#" role="button">Все услуги</a>
+      </div>
+    </div>
+
+    <div class="row works-items pb-5">
+      <div class="col-4 pb-3">
+        <img src="/assets/img/cat-3.jpg" alt="">
+        <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
+        <p class="color-secondary my-4">
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+        </p>
+        <a href="#">Подробнее</a>
+      </div>
+
+      <div class="col-4 pb-3">
+        <img src="/assets/img/cat-3.jpg" alt="">
+        <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
+        <p class="color-secondary my-4">
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+        </p>
+        <a href="#">Подробнее</a>
+      </div>
+
+      <div class="col-4 pb-3">
+        <img src="/assets/img/cat-3.jpg" alt="">
+        <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
+        <p class="color-secondary my-4">
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+        </p>
+        <a href="#">Подробнее</a>
       </div>
     </div>
 
