--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5 class="fw-600">Создание сайтов</h5>
-        <p class="description color-secondary">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+        <p class="description color-secondary">Lorem Ipsum - это текст- "рыба", часто используе в печати и
+          вэб-дизайне.</p>
       </div>
     </div>
 
@@ -69,7 +70,8 @@
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5 class="fw-600">Создание сайтов</h5>
-        <p class="description color-secondary">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
+        <p class="description color-secondary">Lorem Ipsum - это текст-"рыба", часто используе в печати и
+          вэб-дизайне.</p>
       </div>
     </div>
 
@@ -77,7 +79,8 @@
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5 class="fw-600">Создание сайтов</h5>
-        <p class="description color-secondary">Lorem Ipsum - это текст-"рыба", часто используе в печати и вэб-дизайне.</p>
+        <p class="description color-secondary">Lorem Ipsum - это текст-"рыба", часто используе в печати и
+          вэб-дизайне.</p>
       </div>
     </div>
   </div>
@@ -162,9 +165,9 @@
 
 <!--works------------------------------->
 
-<div class="bg-purple">
-  <div class="container works py-5">
-
+<div class="works">
+  <div class="bg-purple"></div>
+  <div class="container py-5">
     <div class="row py-5">
       <div class="col-6">
         <h2 class="fw-700 text-white">
@@ -182,7 +185,8 @@
         <img src="/assets/img/cat-3.jpg" alt="">
         <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
         <p class="color-secondary my-4">
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.
         </p>
         <a href="#">Подробнее</a>
       </div>
@@ -191,7 +195,8 @@
         <img src="/assets/img/cat-3.jpg" alt="">
         <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
         <p class="color-secondary my-4">
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.
         </p>
         <a href="#">Подробнее</a>
       </div>
@@ -200,9 +205,47 @@
         <img src="/assets/img/cat-3.jpg" alt="">
         <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
         <p class="color-secondary my-4">
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.
         </p>
         <a href="#">Подробнее</a>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!--projects-------------------------------->
+
+<div class="bg-gray">
+  <div class="container projects mt-5">
+
+    <div class="row">
+      <div class="col col-8 offset-2 text-center">
+        <h2 class="mb-5 fw-700">Наши проекты</h2>
+        <p class="mb-5 color-secondary">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem
+          Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+      </div>
+    </div>
+
+    <div class="row mb-5">
+      <div class="col-3">
+        <img src="/assets/img/cat-4.jpg" alt="">
+      </div>
+      <div class="col-3">
+        <img src="/assets/img/cat-4.jpg" alt="">
+      </div>
+      <div class="col-3">
+        <img src="/assets/img/cat-4.jpg" alt="">
+      </div>
+      <div class="col-3">
+        <img src="/assets/img/cat-4.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col text-center">
+        <a class="btn btn-primary" href="#" role="button">Все проекты</a>
       </div>
     </div>
 
