--- a/index.html
+++ b/index.html
@@ -252,6 +252,25 @@
   </div>
 </div>
 
+<!--video-------------------------------->
+
+<div class="container-fluid video">
+  <div class="row">
+    <div class=" my-5 col-6 offset-3 text-white text-center">
+      <h2 class="fw-700 mt-5">Видео о нашей работе</h2>
+      <p>Просто посмотрите, как мы работаем</p>
+    </div>
+  </div>
+
+  <div class="row video-frame justify-content-center">
+    <div class="align-self-center text-white py-3 px-5 video-play">
+      <img src="/assets/icons/play-button.svg" alt="">
+      <span class="pl-4">Смотреть видео</span>
+    </div>
+    <img src="/assets/img/cat-5.jpg" alt="">
+  </div>
+</div>
+
 </body>
 </html>
 
