--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="title col-6 offset-3 text-white text-center">
       <div class="mb-3">Передовая IT студия</div>
       <h1 class="mb-5 fw-800">Мы создаем легкие решения сложных задач и проблем</h1>
-      <a class="btn btn-primary mb-3" href="#" role="button">Наши проекты</a>
+      <a class="btn btn-primary button-fixed-width mb-3" href="#" role="button">Наши проекты</a>
     </div>
   </div>
 
@@ -87,7 +87,7 @@
 
   <div class="row">
     <div class="col text-center">
-      <a class="btn btn-primary" href="#" role="button">Все услуги</a>
+      <a class="btn btn-primary button-fixed-width" href="#" role="button">Все услуги</a>
     </div>
   </div>
 </div>
@@ -165,7 +165,7 @@
 
 <!--works------------------------------->
 
-<div class="works">
+<div id="works" class="works">
   <div class="bg-purple"></div>
   <div class="container py-5">
     <div class="row py-5">
@@ -217,7 +217,7 @@
 
 <!--projects-------------------------------->
 
-<div class="bg-gray">
+<div id="projects" class="bg-gray">
   <div class="container projects mt-5">
 
     <div class="row">
@@ -245,7 +245,7 @@
 
     <div class="row">
       <div class="col text-center">
-        <a class="btn btn-primary" href="#" role="button">Все проекты</a>
+        <a class="btn btn-primary button-fixed-width" href="#" role="button">Все проекты</a>
       </div>
     </div>
 
@@ -256,7 +256,7 @@
 
 <div class="container-fluid video">
   <div class="row">
-    <div class=" my-5 col-6 offset-3 text-white text-center">
+    <div class="my-5 col-6 offset-3 text-white text-center">
       <h2 class="fw-700 mt-5">Видео о нашей работе</h2>
       <p>Просто посмотрите, как мы работаем</p>
     </div>
@@ -268,6 +268,78 @@
       <span class="pl-4">Смотреть видео</span>
     </div>
     <img src="/assets/img/cat-5.jpg" alt="">
+  </div>
+</div>
+
+<!--subscribe-------------------------------->
+
+<div class="container">
+  <div class="row subscribe text-center">
+    <div class="col my-5">
+      <h5 class="fw-600 mt-5 text-medium mb-3">Подпишитесь на нашу рассылку</h5>
+      <p class="color-secondary mb-4">Полезные статьи, акции, новости - получите все это сейчас!</p>
+
+      <div class="input-group col-10 offset-1 col-lg-6 offset-lg-3 mb-4 text-nowrap">
+        <input type="text" class="form-control color-secondary text-small subscribe-input" placeholder="Ваш e-mail"
+               aria-label="Ваш e-mail">
+        <div class="input-group-append">
+          <button class="btn btn-primary subscribe-btn px-4" type="submit">Подписаться</button>
+        </div>
+      </div>
+      <p class="color-secondary text-small mb-5">Мы не шлем спам, и передаем никому ваши данные.</p>
+    </div>
+  </div>
+</div>
+
+<!--footer-------------------------------->
+
+<div class="bg-gray">
+  <div class="container pt-5 footer">
+
+    <div class="row my-5">
+      <div class="col-3">
+        <h5 class="fw-600 text-medium">Контактная информация</h5>
+        <ul class="color-secondary text-small">
+          <li class="email"><a href="mailto:test@test.ru">test@test.ru</a></li>
+          <li class="phone"><a href="tel:+8 777 555 66 99">+8 777 555 66 99</a></li>
+          <li class="address">Москва, Бульвар Ленина 33</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <h5 class="fw-600 text-medium">Основные ссылки</h5>
+        <ul class="color-secondary text-small list">
+          <li><a href="#">Главная</a></li>
+          <li><a href="#projects">Наши проекты</a></li>
+          <li><a href="#works">Наши услуги</a></li>
+          <li>Контакты</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <h5 class="fw-600 text-medium">Наши проекты</h5>
+        <ul class="color-secondary text-small list">
+          <li>РосНано</li>
+          <li>Сколково</li>
+          <li>Проект “Восток”</li>
+          <li>ТЭЦ Калининграда</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <h5 class="fw-600 text-medium">Социальные сети</h5>
+        <ul class="color-secondary text-small list">
+          <li>VK.com</li>
+          <li>Instagram</li>
+          <li>Facebook</li>
+          <li>Twitter</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col text-center py-4 footer-rights">
+        <p class="color-secondary text-small">(с) 2019. Все права защищены.</p>
+      </div>
+    </div>
+
   </div>
 </div>
 
