add some adaptive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="row">
-    <div class="title col-6 offset-3 text-white text-center">
+    <div class="title col-lg-6 offset-lg-3 text-white text-center">
       <div class="mb-3">Передовая IT студия</div>
       <h1 class="mb-5 fw-800">Мы создаем легкие решения сложных задач и проблем</h1>
       <a class="btn btn-primary button-fixed-width mb-3" href="#" role="button">Наши проекты</a>
@@ -57,7 +57,7 @@
   </div>
 
   <div class="row mb-5">
-    <div class="item col-4">
+    <div class="item col-md-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5 class="fw-600">Создание сайтов</h5>
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="item col-4">
+    <div class="item col-md-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5 class="fw-600">Создание сайтов</h5>
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-    <div class="item col-4">
+    <div class="item col-md-4">
       <div class="icon mr-3"><img class="icon" src="/assets/icons/project.svg" alt=""></div>
       <div class="pt-5">
         <h5 class="fw-600">Создание сайтов</h5>
@@ -98,7 +98,7 @@
   <div class="container about">
 
     <div class="row about-block">
-      <div class="col-6 about-text pr-5">
+      <div class="col-md-5 about-text">
         <h2 class="fw-700">Высокие стандарты разработки</h2>
         <p class="color-secondary my-4">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
@@ -107,7 +107,7 @@
         </p>
         <a href="#">Подробнее о компании</a>
       </div>
-      <div class="col-6 pl-5">
+      <div class="col-md-6 ml-auto">
         <img src="/assets/img/cat-2.jpg" alt="">
       </div>
     </div>
@@ -169,14 +169,14 @@
   <div class="bg-purple"></div>
   <div class="container py-5">
     <div class="row py-5">
-      <div class="col-6">
+      <div class="col-md-6">
         <h2 class="fw-700 text-white">
           Наши работы, на которых мы специализируемся
         </h2>
       </div>
 
-      <div class="col-6 text-right align-self-center">
-        <a class="btn btn-primary" href="#" role="button">Все услуги</a>
+      <div class="col-md-5 ml-auto text-right align-self-center">
+        <a class="btn button-fixed-width btn-primary" href="#" role="button">Все услуги</a>
       </div>
     </div>
 
