--- a/index.html
+++ b/index.html
@@ -18,23 +18,33 @@
     <div class="row header">
       <div class="col-md-10 offset-md-1 col-lg-6 offset-lg-3">
         <div class="row">
-          <div class="navigation col text-white">
-            <div class="navigation-link active">
-              <a href="#">Главная</a>
+
+          <div class="navigation col">
+
+            <div class="menu-toggle">
+              <a href="#"><img src="/assets/icons/menu.svg" alt=""></a>
             </div>
-            <div class="navigation-link">
-              <a href="#">Наши проекты</a>
+
+            <div class="nav-links">
+              <div class="link active">
+                <a href="#">Главная</a>
+              </div>
+              <div class="link">
+                <a href="#projects">Наши проекты</a>
+              </div>
+              <div class="link">
+                <a href="#services">Услуги</a>
+              </div>
+              <div class="link">
+                <a href="#">Новости</a>
+              </div>
+              <div class="link">
+                <a href="#footer">Контакты</a>
+              </div>
             </div>
-            <div class="navigation-link">
-              <a href="#">Услуги</a>
-            </div>
-            <div class="navigation-link">
-              <a href="#">Новости</a>
-            </div>
-            <div class="navigation-link">
-              <a href="#">Контакты</a>
-            </div>
+
           </div>
+
         </div>
 
         <div class="row">
@@ -49,7 +59,7 @@
 
     <!--services---------------------------->
 
-    <div class="row">
+    <div id="services" class="row">
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 services">
 
         <div class="row">
@@ -309,19 +319,19 @@
 
     <!--footer-------------------------------->
 
-    <div class="row pt-5 footer bg-gray">
+    <div id="footer" class="row pt-5 footer bg-gray">
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
 
         <div class="row my-5">
-          <div class="col-3">
+          <div class="col-md-3">
             <h5 class="fw-600 text-medium">Контактная информация</h5>
             <ul class="color-secondary text-small">
               <li class="email"><a href="mailto:test@test.ru">test@test.ru</a></li>
               <li class="phone"><a href="tel:+8 777 555 66 99">+8 777 555 66 99</a></li>
-              <li class="address">Москва, Бульвар Ленина 33</li>
+              <li class="address"><a href="https://goo.gl/maps/maKydXWRMrLe7NwW7">Днепр, ул. Баррикадная, 16</a></li>
             </ul>
           </div>
-          <div class="col-3">
+          <div class="col-md-3">
             <h5 class="fw-600 text-medium">Основные ссылки</h5>
             <ul class="color-secondary text-small list">
               <li><a href="#">Главная</a></li>
@@ -330,22 +340,22 @@
               <li>Контакты</li>
             </ul>
           </div>
-          <div class="col-3">
+          <div class="col-md-3">
             <h5 class="fw-600 text-medium">Наши проекты</h5>
             <ul class="color-secondary text-small list">
-              <li>РосНано</li>
-              <li>Сколково</li>
-              <li>Проект “Восток”</li>
-              <li>ТЭЦ Калининграда</li>
+              <li><a href="#footer">РосНано</a></li>
+              <li><a href="#footer">Сколково</a></li>
+              <li><a href="#footer">Проект “Восток”</a></li>
+              <li><a href="#footer">ТЭЦ Калининграда</a></li>
             </ul>
           </div>
-          <div class="col-3">
+          <div class="col-md-3">
             <h5 class="fw-600 text-medium">Социальные сети</h5>
             <ul class="color-secondary text-small list">
-              <li>VK.com</li>
-              <li>Instagram</li>
-              <li>Facebook</li>
-              <li>Twitter</li>
+              <li><a href="#footer">VK.com</a></li>
+              <li><a href="#footer">Instagram</a></li>
+              <li><a href="#footer">Facebook</a></li>
+              <li><a href="#footer">witter</a></li>
             </ul>
           </div>
         </div>
@@ -361,5 +371,24 @@
 
   </div>
 </body>
+
+<script>
+const menuToggle = () => {
+  const menu = document.querySelector('.nav-links');
+
+  menu.classList.toggle('nav-links-open');
+    console.log("clickkkkk")
+}
+
+document
+  .querySelector('.menu-toggle')
+  .addEventListener('click', menuToggle);
+
+document
+  .querySelectorAll('.link')
+  .forEach((link) => {
+    link.addEventListener('click', menuToggle);
+  });
+</script>
 </html>
 
