add some animations

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               <li><a href="#footer">VK.com</a></li>
               <li><a href="#footer">Instagram</a></li>
               <li><a href="#footer">Facebook</a></li>
-              <li><a href="#footer">witter</a></li>
+              <li><a href="#footer">Twitter</a></li>
             </ul>
           </div>
         </div>
