remove some crazy animations

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row header">
-      <div class="col-md-10 offset-md-1 col-lg-6 offset-lg-3">
+      <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <div class="row">
 
           <div class="navigation col">
@@ -114,7 +114,7 @@
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 about">
 
         <div class="row about-block">
-          <div class="col-md-5 about-text">
+          <div class="col-md-6 mb-5 about-text">
             <h2 class="fw-700">Высокие стандарты разработки</h2>
             <p class="color-secondary my-4">
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
@@ -123,7 +123,7 @@
             </p>
             <a href="#">Подробнее о компании</a>
           </div>
-          <div class="col-md-6 ml-auto">
+          <div class="col-6 m-auto">
             <img src="/assets/img/cat-2.jpg" alt="">
           </div>
         </div>
@@ -191,7 +191,7 @@
             </h2>
           </div>
 
-          <div class="col-md-5 ml-auto text-right align-self-center">
+          <div class="col-md-6 ml-auto text-right align-self-center">
             <a class="btn button-fixed-width btn-primary" href="#" role="button">Все услуги</a>
           </div>
         </div>
@@ -199,12 +199,14 @@
         <div class="row works-items pb-5">
           <div class="col-md-4 pb-3">
             <img src="/assets/img/cat-3.jpg" alt="">
-            <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
-            <p class="color-secondary my-4">
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
-              "рыбой" для текстов на латинице с начала XVI века.
-            </p>
-            <a href="#">Подробнее</a>
+            <div>
+              <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
+              <p class="color-secondary my-4">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+                "рыбой" для текстов на латинице с начала XVI века.
+              </p>
+              <a href="#">Подробнее</a>
+            </div>
           </div>
 
           <div class="col-md-4 pb-3">
