refactoring animations and responsive design

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 services">
 
         <div class="row">
-          <div class="col col-8 offset-2 text-center">
+          <div class="col col-md-8 offset-md-2 text-center">
             <h2 class="mb-4 fw-700">Мы создаем мобильные приложения для крупных корпораций</h2>
             <p class="mb-5 color-secondary">
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
@@ -124,7 +124,7 @@
             <a href="#">Подробнее о компании</a>
           </div>
           <div class="col-6 m-auto">
-            <img src="/assets/img/cat-2.jpg" alt="">
+            <img class="img-scale-shadow" src="/assets/img/cat-2.jpg" alt="">
           </div>
         </div>
 
@@ -198,19 +198,7 @@
 
         <div class="row works-items pb-5">
           <div class="col-md-4 pb-3">
-            <img src="/assets/img/cat-3.jpg" alt="">
-            <div>
-              <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
-              <p class="color-secondary my-4">
-                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
-                "рыбой" для текстов на латинице с начала XVI века.
-              </p>
-              <a href="#">Подробнее</a>
-            </div>
-          </div>
-
-          <div class="col-md-4 pb-3">
-            <img src="/assets/img/cat-3.jpg" alt="">
+            <img class="img-scale-shadow" src="/assets/img/cat-3.jpg" alt="">
             <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
             <p class="color-secondary my-4">
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
@@ -220,7 +208,17 @@
           </div>
 
           <div class="col-md-4 pb-3">
-            <img src="/assets/img/cat-3.jpg" alt="">
+            <img class="img-scale-shadow" src="/assets/img/cat-3.jpg" alt="">
+            <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
+            <p class="color-secondary my-4">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+              "рыбой" для текстов на латинице с начала XVI века.
+            </p>
+            <a href="#">Подробнее</a>
+          </div>
+
+          <div class="col-md-4 pb-3">
+            <img class="img-scale-shadow" src="/assets/img/cat-3.jpg" alt="">
             <h5 class="fw-600 mt-5"><span class="color-primary">01.</span> Исследование и упаковка</h5>
             <p class="color-secondary my-4">
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
@@ -235,7 +233,7 @@
 
     <!--projects-------------------------------->
 
-    <div id="projects" class="row bg-gray">
+    <div id="projects" class="row bg-gray py-5">
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 projects">
 
         <div class="row">
@@ -248,18 +246,29 @@
         </div>
 
         <div class="row mb-5">
-          <div class="col-3">
-            <img src="/assets/img/cat-4.jpg" alt="">
+
+          <div class="col-6 text-right">
+            <div class="row">
+              <div class="col-md-6 py-3">
+                <img class="img-scale-shadow" src="/assets/img/cat-4.jpg" alt="">
+              </div>
+              <div class="col-md-6 py-3">
+                <img class="img-scale-shadow" src="/assets/img/cat-4.jpg" alt="">
+              </div>
+            </div>
           </div>
-          <div class="col-3">
-            <img src="/assets/img/cat-4.jpg" alt="">
+
+          <div class="col-6">
+            <div class="row">
+              <div class="col-md-6 py-3">
+                <img class="img-scale-shadow" src="/assets/img/cat-4.jpg" alt="">
+              </div>
+              <div class="col-md-6 py-3">
+                <img class="img-scale-shadow" src="/assets/img/cat-4.jpg" alt="">
+              </div>
+            </div>
           </div>
-          <div class="col-3">
-            <img src="/assets/img/cat-4.jpg" alt="">
-          </div>
-          <div class="col-3">
-            <img src="/assets/img/cat-4.jpg" alt="">
-          </div>
+
         </div>
 
         <div class="row">
@@ -274,17 +283,17 @@
     <!--video-------------------------------->
 
     <div class="row video">
-      <div class="col-md-10 offset-md-1 col-lg-6 offset-lg-3">
+      <div class="col">
 
         <div class="row">
-          <div class="my-5 col text-white text-center">
+          <div class="col-10 offset-1 col-lg-6 offset-lg-3 mt-5 text-white text-center">
             <h2 class="fw-700">Видео о нашей работе</h2>
             <p>Просто посмотрите, как мы работаем</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col video-frame">
+          <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 video-frame text-center">
             <div class="video-play text-white py-3 px-5">
               <img src="/assets/icons/play-button.svg" alt="">
               <span class="pl-4">Смотреть видео</span>
